--- a/wp-content/themes/workingnyc/views/objects/ie-warning.twig
+++ b/wp-content/themes/workingnyc/views/objects/ie-warning.twig
@@ -2,12 +2,13 @@
   <article class="c-alert color-status-primary mb-5" data-js="alert-info">
     <div class="c-alert__graphic">
       <svg aria-hidden="true" class="icon-wnyc-ui">
-        <use xlink:href="#info"></use>
+        <use href="#info"></use>
       </svg>
     </div>
+
     <div class="c-alert__body">
       <p data-js-alert="text">
-      	{{ options.internet_explorer}}
+        {{ options.internet_explorer}}
       </p>
     </div>
   </article>
