--- a/wp-content/themes/workingnyc/views/components/web-share.twig
+++ b/wp-content/themes/workingnyc/views/components/web-share.twig
@@ -9,10 +9,10 @@
     <span>{{__('Share', 'WNYC')}}</span>
   </button>
 
-  <div aria-hidden="true" class="c-web-share__fallback color-card hidden {{ this.class }}" id="aria-c-web-share-fallback-{{ id }}" role="region">
+  <div aria-hidden="true" class="c-web-share__fallback hidden {{ this.class }}" id="aria-c-web-share-fallback-{{ id }}" role="region">
     <div class="c-web-share__fallback-body">
-      <div class="flex mb-1 items-center flex-row-reverse">
-        <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="btn btn-primary btn-small m-0" data-js="web-share" tabindex="-1">
+      <div class="flex mb-2 items-center flex-row-reverse">
+        <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="link-icon m-0" data-js="web-share" tabindex="-1">
           <svg aria-hidden="true" class="icon-wnyc-ui" tabindex="-1">
             <use href="#feather-x"></use>
           </svg>
