--- a/wp-content/themes/workingnyc/views/objects/feedback.twig
+++ b/wp-content/themes/workingnyc/views/objects/feedback.twig
@@ -1,4 +1,4 @@
-<section class="z-10 sticky o-navigation-spacing-bottom" data-js="feedback">
+<section class="shadow-up tablet:shadow-none z-10 sticky o-navigation-spacing-bottom" data-js="feedback">
   <div class="layout-content bg-scale-2">
     <div class="tablet:px-3 tablet:py-2">
       <article class="c-alert status-primary" data-js="alert-warning">
