--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,4 +1,4 @@
-<footer aria-label="Primary Footer" class="o-footer pb-3 bg-scale-1 tablet:bg-scale-2" role="contentinfo">
+<footer aria-label="Primary Footer" class="o-footer relative z-10 pb-3 bg-scale-1 tablet:bg-scale-2" role="contentinfo">
   <div class="page-max">
     <div class="o-attribution">
       <nav aria-label="Footer Primary Navigation" class="nav-block tablet:nav-inline tablet:flex items-center">
