Add RTL utility to all programs link

--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -55,13 +55,13 @@
         <div class="layout-content">
           <div class="wrap tablet:py-6">
             <a class="btn btn-secondary light:btn-primary btn-next flex w-full" href="{{ programs_archive }}">
-              <svg aria-hidden="true" class="icon-wnyc-ui">
+              <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip">
                 <use href="#feather-arrow-left"></use>
               </svg>
 
               <span>{{ __('See all programs', 'WNYC') }}</span>
 
-              <svg aria-hidden="true" class="icon-wnyc-ui">
+              <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip">
                 <use href="#feather-arrow-right"></use>
               </svg>
             </a>
