--- a/wp-content/themes/workingnyc/views/sitemap.twig
+++ b/wp-content/themes/workingnyc/views/sitemap.twig
@@ -1,4 +1,4 @@
-<div>
+<div class="mb-8">
   <h2 class="h3">{{ __('General Navigation', 'WNYC') }}</h2>
 
   <ul>
@@ -8,7 +8,7 @@
   </ul>
 </div>
 
-<div>
+<div class="mb-8">
   <h2 class="h3">{{ __('Programs', 'WNYC') }}</h2>
 
   <ul>
@@ -20,7 +20,7 @@
   </ul>
 </div>
 
-<div>
+<div class="mb-8">
   <h2 class="h3">{{ __('About Working NYC', 'WNYC') }}</h2>
 
   <ul>
