Em text color for icons

--- a/wp-content/themes/workingnyc/views/components/program.twig
+++ b/wp-content/themes/workingnyc/views/components/program.twig
@@ -18,7 +18,7 @@
       </mark>{% endif %}
 
       {% if post.status.disability_info %}<span class="flex mie-2" data-program="accessible" title="{{ __('Disability accommodation details are avaiable.', 'WNYC-Programs') }}>
-        <svg aria-hidden="true" class="icon text-alt">
+        <svg aria-hidden="true" class="icon text-em">
           <use href="#icon-wnyc-accessible"></use>
         </svg>
 
@@ -26,7 +26,7 @@
       </span>{% endif %}
 
       {% if post.status.language_access_info %}<span class="flex me-2" data-program="multilingual" title="{{ __('Language access details are avaiable.', 'WNYC-Programs') }}">
-        <svg aria-hidden="true" class="icon-wnyc-ui text-alt">
+        <svg aria-hidden="true" class="icon-wnyc-ui text-em">
           <use href="#icon-wnyc-translate"></use>
         </svg>
 
