Add WordPress Bitly plugin and copy shortlink convenience button

--- a/wp-content/themes/workingnyc/views/components/utility-nav.twig
+++ b/wp-content/themes/workingnyc/views/components/utility-nav.twig
@@ -11,8 +11,22 @@
   <a class="text-inherit mis-3 {{ item.class }}" href="{{ item.link }}">{{ item.label }}</a>
   {% endfor %}
 
-  {% if web_share %}
-  {% include 'components/web-share.twig' with {this: {share: web_share, class: 'z-30 right-0'}} only %}
+  {% if web_share and post.web_share_hide == false %}
+  {% set web_share_id = fn('uniqid') %}
+
+  {% include 'components/web-share.twig' with {this: {share: web_share, class: 'z-30 right-0', id: web_share_id}} only %}
+
+  <button aria-pressed="false" class="btn btn-small btn-primary mis-2 hidden tablet:inline-flex" data-copy="web-share-url-{{ web_share_id }}" data-js="copy">
+    <svg class="icon icon-wnyc-ui">
+      <use href="#feather-copy"></use>
+    </svg>
+
+    <svg class="icon-pressed icon-wnyc-ui mie-1">
+      <use href="#feather-check"></use>
+    </svg>
+
+    <span>{{ __('Copy URL', 'WNYC') }}</span>
+  </button>
   {% endif %}
 
   {% if has_filters %}
