--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,4 +1,4 @@
-<section class="o-newsletter layout-content py-6" data-js="newsletter">
+<section class="o-newsletter layout-content py-6 relative z-10" data-js="newsletter">
   <div class="pt-2 pb-3 wrap">
     <h2 class="o-newsletter__heading h4 font-normal">{{ __('Newsletter', 'WNYC-Newsletter') }}</h2>
 
