--- a/wp-content/themes/workingnyc/views/components/web-share.twig
+++ b/wp-content/themes/workingnyc/views/components/web-share.twig
@@ -1,7 +1,5 @@
-{% set id = (this.id) ? this.id : fn('uniqid') %}
-
 <div class='c-web-share'>
-  <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="btn btn-small btn-primary m-0" data-js="web-share" data-web-share='{{ this.share|json_encode }}'>
+  <button aria-controls="aria-c-web-share-fallback-{{ this.id }}" aria-expanded="false" class="btn btn-small btn-primary m-0" data-js="web-share" data-web-share='{{ this.share|json_encode }}'>
     <svg class="c-web-share__icon icon-wnyc-ui">
       <use href="#feather-share-2"></use>
     </svg>
@@ -9,10 +7,10 @@
     <span>{{__('Share', 'WNYC')}}</span>
   </button>
 
-  <div aria-hidden="true" class="c-web-share__fallback hidden {{ this.class }}" id="aria-c-web-share-fallback-{{ id }}" role="region">
+  <div aria-hidden="true" class="c-web-share__fallback hidden {{ this.class }}" id="aria-c-web-share-fallback-{{ this.id }}" role="region">
     <div class="c-web-share__fallback-body">
       <div class="flex mb-2 items-center flex-row-reverse">
-        <button aria-controls="aria-c-web-share-fallback-{{ id }}" aria-expanded="false" class="link-icon m-0" data-js="web-share" tabindex="-1">
+        <button aria-controls="aria-c-web-share-fallback-{{ this.id }}" aria-expanded="false" class="link-icon m-0" data-js="web-share" tabindex="-1">
           <svg aria-hidden="true" class="icon-wnyc-ui" tabindex="-1">
             <use href="#feather-x"></use>
           </svg>
@@ -20,20 +18,20 @@
           <span>{{__('Close', 'WNYC')}}</span>
         </button>
 
-        <label class="c-web-share__label flex-1" for="web-share-url-{{ id }}" tabindex="-1">{{__('Share this URL', 'WNYC')}}</label>
+        <label class="c-web-share__label flex-1" for="web-share-url-{{ this.id }}" tabindex="-1">{{__('Share this URL', 'WNYC')}}</label>
       </div>
 
       <div class="c-web-share__input input">
-        <input data-copy-target="web-share-url-{{ id }}" id="web-share-url-{{ id }}" name="web-share-url-{{ id }}" tabindex="-1" type="text" value="{{ this.share.url }}" />
+        <input data-copy-target="web-share-url-{{ this.id }}" id="web-share-url-{{ this.id }}" name="web-share-url-{{ this.id }}" tabindex="-1" type="text" value="{{ this.share.url }}" />
       </div>
 
       <div class="c-web-share__items">
-        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary mx-0" data-copy="web-share-url-{{ id }}" data-js="copy" tabindex="-1">
-          <svg class="icon icon-wnyc-ui">
+        <button aria-pressed="false" class="c-web-share__item c-web-share__copy btn btn-small btn-primary mx-0" data-copy="web-share-url-{{ this.id }}" data-js="copy" tabindex="-1">
+          <svg class="icon icon-wnyc-ui" tabindex="-1">
             <use href="#feather-copy"></use>
           </svg>
 
-          <svg class="icon-pressed icon-wnyc-ui mie-1">
+          <svg class="icon-pressed icon-wnyc-ui mie-1" tabindex="-1">
             <use href="#feather-check"></use>
           </svg>
 
