Fix newsletter alert status colors

--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -95,7 +95,7 @@
 
               <button class="btn-primary" type="submit">Submit</button>
 
-              <article aria-hidden="true" class="c-alert color-status-tertiary mt-5 hidden" data-js="alert-error" role="alert">
+              <article aria-hidden="true" class="c-alert status-tertiary mt-5 hidden" data-js="alert-error" role="alert">
                 <div class="c-alert__graphic">
                   <svg aria-hidden="true" class="icon-wnyc-ui">
                     <use href="#feather-info"></use>
@@ -107,7 +107,7 @@
                 </div>
               </article>
 
-              <article aria-hidden="true" class="c-alert color-status-tertiary mt-5 hidden" data-js="alert-warning" role="alert">
+              <article aria-hidden="true" class="c-alert status-tertiary mt-5 hidden" data-js="alert-warning" role="alert">
                 <div class="c-alert__graphic">
                   <svg aria-hidden="true" class="icon-wnyc-ui">
                     <use href="#feather-info"></use>
@@ -119,7 +119,7 @@
                 </div>
               </article>
 
-              <article aria-hidden="true" class="c-alert color-status-secondary mt-5 hidden" data-js="alert-success" role="alert">
+              <article aria-hidden="true" class="c-alert status-secondary mt-5 hidden" data-js="alert-success" role="alert">
                 <div class="c-alert__graphic">
                   <svg aria-hidden="true" class="icon-wnyc-ui">
                     <use href="#feather-info"></use>
