--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -1,71 +1,65 @@
 <article class="c-card h-full {{ post.classes }}">
   <header class="c-card__header">
     <a href="{{ post.link }}" {% if post.link_target == '_blank' %}target="{{ post.link_target }}" rel="noopener nofollow"{% endif %}>
-      <h3 class="c-card__title mt-0 mb-2">
-          <span data-program="plain-language-name">{{ post.program_title }}</span>
-      </h3>
+      <h3 class="c-card__title mt-0 mb-2">{{ post.program_plain_language_title }}</h3>
     </a>
 
     <h4 class="c-card__subtitle text-alt mb-1">
-      <b>{{ post.title }}</b> {{ __('by', 'WNYC-Programs') }} {{ post.program_agency }}
+      <b>{{ post.program_title }}</b> {{ __('by', 'WNYC') }} {{ post.program_agency }}
     </h4>
   </header>
 
   <div class="c-card__body">
     {% if post.status %}<p class="c-card__status flex items-center">
-      {% if post.status.actively_recruiting %}<mark class="badge mie-2" data-program="recruiting">
-        {{ post.terms('recruitment_status')[0] }}
+      {% if post.status.recruiting %}<mark class="badge mie-2" data-program="recruiting">
+        {{ post.status.recruiting.name }}
       </mark>{% endif %}
 
-      {% if post.status.disability_info %}<span class="flex mie-2" data-program="accessible" title="{{ __('Disability accommodation details are avaiable.', 'WNYC-Programs') }}">
+      {% if post.status.disability %}<span class="flex mie-2" data-program="accessible" title="{{ post.status.disability.name }}">
         <svg aria-hidden="true" class="icon text-em">
           <use href="#icon-wnyc-accessible"></use>
         </svg>
 
-        <span class="sr-only">{{ __('Disability accommodation details are avaiable.', 'WNYC-Programs') }}</span>
+        <span class="sr-only">{{ post.status.disability.name }}</span>
       </span>{% endif %}
 
-      {% if post.status.language_access_info %}<span class="flex me-2" data-program="multilingual" title="{{ __('Language access details are avaiable.', 'WNYC-Programs') }}">
+      {% if post.status.language %}<span class="flex me-2" data-program="multilingual" title="{{ post.status.language.name }}">
         <svg aria-hidden="true" class="icon-wnyc-ui text-em">
           <use href="#icon-wnyc-translate"></use>
         </svg>
 
-        <span class="sr-only">{{ __('Language access details are avaiable.', 'WNYC-Programs') }}</span>
+        <span class="sr-only">{{ post.status.language.name }}</span>
       </span>{% endif %}
     </p>{% endif %}
 
 
-    <div class="c-card__summary">
+    {% if post.intro or post.populations %}<div class="c-card__summary">
       <p>
-        <span data-program="summary">{{ post.program_intro|replace({'[blockquote text=\"': '', '\"]':''})|striptags }}</span>
-        {% if post.terms('populations') %}{{ __('For', 'WNYC') }} {{ post.terms('populations')|map(s => "<b class='text-em' data-program='taxonomy.population'>#{s.name}</b>")|join(', ') }}.{% endif %}
+        {{ post.intro }}
+        {{ post.populations }}
       </p>
-    </div>
+    </div>{% endif %}
 
     <ul class="c-card__features">
-      {% if post.terms('services') %}
-      <li class="flex items-center">
+      {% if post.services %}<li class="flex items-center">
         <svg class="icon-wnyc-ui flex-shrink-0 mie-1" role="img">
           <title>{{ __('Services', 'WNYC') }}</title>
 
           <use href="#feather-award"></use>
         </svg>
 
-        <span>{{ post.terms('services')|map(s => "<span data-program='taxonomy.service'>#{s.name}</span>")|join(', ') }}</span>
-      </li>
-      {% endif %}
+        <span>{{ post.services }}</span>
+      </li>{% endif %}
 
-      {% if post.terms('duration') or post.terms('schedule') %}
-      <li class="flex items-center">
+      {% if post.schedule %}<li class="flex items-center">
         <svg class="icon-wnyc-ui flex-shrink-0 mie-1" role="img">
           <title>{{ __('Schedule', 'WNYC') }}</title>
 
           <use href="#feather-calendar"></use>
         </svg>
 
-        <span>{% if post.terms('duration') %}<span data-program="taxonomy.duration">{{ post.terms('duration')[0] }}</span>, {% endif %}{% if post.terms('schedule') %}<span data-program="taxonomy.schedule">{{ post.terms('schedule')[0] }}</span>{% endif %}</span>
-      </li>
-      {% endif %}
+        <span>{{ post.schedule }}</span>
+      </li>{% endif %}
     </ul>
 
     <a class="c-card__cta" href="{{ post.link }}" {% if post.link_target == '_blank' %}target="{{ post.link_target }}" rel="noopener nofollow"{% endif %}>
