--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -6,12 +6,12 @@
     <div class="layout-content sticky top-0 bg-scale-1 z-10">
       {% include ['components/utility-nav.twig'] with {
         return: {
-          'label': __('Programs', 'Program'),
+          'label': __('Programs', 'WNYC'),
           'link': programs_archive
         },
         cta: [
           {
-            'label': __('Next Steps', 'Program'),
+            'label': __('Next Steps', 'WNYC'),
             'link': '#next-steps'
           }
         ],
@@ -30,7 +30,7 @@
           <h1 class="o-header__title">{{ post.program_title }}</h1>
 
           <h2 class="o-header__subtitle">
-            <b>{{ post.title }}</b> {{ __('by', 'WNYC-Programs')}} {% if post.program_provider and post.program_agency %}{{ post.program_agency }} | {{ post.program_provider }}{% else %}{{ post.program_provider }}{{ post.program_agency }}{% endif %}
+            <b>{{ post.title }}</b> {{ __('by', 'WNYC') }} {% if post.program_provider and post.program_agency %}{{ post.program_agency }} | {{ post.program_provider }}{% else %}{{ post.program_provider }}{{ post.program_agency }}{% endif %}
           </h2>
 
           {% include 'components/breadcrumbs.twig' with {
@@ -58,7 +58,7 @@
           <p class="small flex items-center">
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#more-information">
               <svg class="icon-wnyc-ui icon-2" role="img">
-                <title>{{ __('Services', 'Program') }}</title>
+                <title>{{ __('Services', 'WNYC') }}</title>
 
                 <use href="#feather-award"></use>
               </svg>
@@ -73,14 +73,14 @@
             {% if post.get_field('program_eligibility') %}
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#eligibility">
               <svg class="icon-wnyc-ui icon-2" role="img">
-                <title>{{ __('Eligibility', 'Program') }}</title>
+                <title>{{ __('Eligibility', 'WNYC') }}</title>
 
                 <use href="#feather-users"></use>
               </svg>
             </a>
             {% else %}
             <svg class="icon-wnyc-ui icon-2 flex-shrink-0 mie-1" role="img">
-              <title>{{ __('Eligibility', 'Program') }}</title>
+              <title>{{ __('Eligibility', 'WNYC') }}</title>
 
               <use href="#feather-users"></use>
             </svg>
@@ -95,14 +95,14 @@
             {% if post.get_field('program_schedule') %}
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#schedule">
               <svg class="icon-wnyc-ui icon-2" role="img">
-                <title>{{ __('Schedule', 'Program') }}</title>
+                <title>{{ __('Schedule', 'WNYC') }}</title>
 
                 <use href="#feather-calendar"></use>
               </svg>
             </a>
             {% else %}
             <svg class="icon-wnyc-ui icon-2 mie-1" role="img">
-              <title>{{ __('Schedule', 'Program') }}</title>
+              <title>{{ __('Schedule', 'WNYC') }}</title>
 
               <use href="#feather-calendar"></use>
             </svg>
@@ -117,13 +117,13 @@
           <p class="small flex items-center">
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#disability-accommodation">
               <svg class="icon icon-2" role="img">
-                <title>{{ __('Disability Accommodation', 'Program') }}</title>
+                <title>{{ __('Disability Accommodation', 'WNYC') }}</title>
 
                 <use href="#icon-wnyc-accessible"></use>
               </svg>
             </a>
 
-            <span>{{ __('Disability Accommodation', 'Program') }}</span>
+            <span>{{ __('Disability Accommodation', 'WNYC') }}</span>
           </p>
           {% endif %}
 
@@ -131,25 +131,29 @@
           <p class="small flex items-center">
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#language-access">
               <svg class="icon-wnyc-ui icon-2" role="img">
-                <title>{{ __('Language Access', 'Program') }}</title>
+                <title>{{ __('Language Access', 'WNYC') }}</title>
 
                 <use href="#icon-wnyc-translate"></use>
               </svg>
             </a>
 
-            <span>{{ __('Language Access', 'Program') }}</span>
+            <span>{{ __('Language Access', 'WNYC') }}</span>
           </p>
           {% endif %}
 
           <p class="small flex items-center">
             <svg class="icon-wnyc-ui mie-1 icon-2" role="img">
-              <title>{{ __('Last Updated', 'Program') }}</title>
+              <title>{{ __('Last Updated', 'WNYC') }}</title>
 
               <use href="#feather-alert-triangle"></use>
             </svg>
 
-            {{ __('Last updated', 'WNYC-Date') }} {{ modified_date }}
+            {{ __('Last updated', 'WNYC') }} {{ modified_date }}
           </p>
+
+          <div class="pt-3">
+            <a href="#next-steps" class="btn btn-secondary w-full">{{ __('Next Steps', 'WNYC') }}</a>
+          </div>
         </div>
       </header>
     </div>
@@ -173,13 +177,13 @@
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
               <a class="link-anchor flex flex-shrink-0 mie-1" href="#eligibility">
                 <svg class="icon-wnyc-ui" role="img">
-                  <title>{{ __('Who it\'s for', 'Program') }}</title>
+                  <title>{{ __('Who it\'s for', 'WNYC') }}</title>
 
                   <use href="#feather-users"></use>
                 </svg>
               </a>
 
-              {{ __('Who it\'s for', 'Program') }}
+              {{ __('Who it\'s for', 'WNYC') }}
             </h3>
           </div>
 
@@ -193,13 +197,13 @@
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
               <a class="link-anchor flex flex-shrink-0 mie-1" href="#schedule">
                 <svg class="icon-wnyc-ui" role="img">
-                  <title>{{ __('Schedule', 'Program') }}</title>
+                  <title>{{ __('Schedule', 'WNYC') }}</title>
 
                   <use href="#feather-calendar"></use>
                 </svg>
               </a>
 
-              {{ __('Schedule', 'Program') }}
+              {{ __('Schedule', 'WNYC') }}
             </h3>
           </div>
 
@@ -213,13 +217,13 @@
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
               <a class="link-anchor flex flex-shrink-0 mie-1" href="#disability-accommodation">
                 <svg class="icon" role="img">
-                  <title>{{ __('Disability Accommodation', 'Program') }}</title>
+                  <title>{{ __('Disability Accommodation', 'WNYC') }}</title>
 
                   <use href="#icon-wnyc-accessible"></use>
                 </svg>
               </a>
 
-              {{ __('Disability Accommodation', 'Program') }}
+              {{ __('Disability Accommodation', 'WNYC') }}
             </h3>
           </div>
 
@@ -233,13 +237,13 @@
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
               <a class="link-anchor flex flex-shrink-0 mie-1" href="#language-access">
                 <svg class="icon-wnyc-ui" role="img">
-                  <title>{{ __('Language Access', 'Program') }}</title>
+                  <title>{{ __('Language Access', 'WNYC') }}</title>
 
                   <use href="#icon-wnyc-translate"></use>
                 </svg>
               </a>
 
-              {{ __('Language Access', 'Program') }}
+              {{ __('Language Access', 'WNYC') }}
             </h3>
           </div>
 
@@ -251,7 +255,7 @@
         <section>
           <div class="pt-utility-anchor bg-scale-2 sticky top-0" id="next-steps">
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
-              {{ __('Next Steps', 'Program') }}
+              {{ __('Next Steps', 'WNYC') }}
             </h3>
           </div>
 
@@ -263,10 +267,10 @@
 
     {# Links #}
     <section class="layout-content bg-scale-1 py-4 pb-8" id="contact">
-      <nav class="wrap grid gap-1" aria-label="{{ __('Contact Information', 'WNYC-Programs') }}">
+      <nav class="wrap grid gap-1" aria-label="{{ __('Contact Information', 'WNYC') }}">
         {% if post.program_learn_more %}
         <a class="btn btn-secondary w-full" href="{{ post.program_learn_more }}" target="_blank" rel="noopener nofollow">
-          <span>{{ __('Learn More', 'WNYC-Programs') }} <span class="sr-only">{{ __('about', 'WNYC-Programs') }} {{ post.program_title }}</span></span>
+          <span>{{ __('Learn More', 'WNYC') }} <span class="sr-only">{{ __('about', 'WNYC') }} {{ post.program_title }}</span></span>
 
           <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip">
             <use href="#feather-external-link"></use>
@@ -276,7 +280,7 @@
 
         {% if post.program_apply_online %}
         <a class="btn btn-secondary w-full" href="{{ post.program_apply_online }}" target="_blank" rel="noopener nofollow">
-          <span>{{ __('Apply', 'WNYC-Programs') }} <span class="sr-only">{{ __('for', 'WNYC-Programs') }} {{ post.program_title }}</span></span>
+          <span>{{ __('Apply', 'WNYC') }} <span class="sr-only">{{ __('for', 'WNYC') }} {{ post.program_title }}</span></span>
 
           <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip">
             <use href="#feather-external-link"></use>
@@ -286,13 +290,13 @@
 
         {% if post.program_call %}
         <a class="btn btn-secondary w-full" href="tel:{{ post.program_call|trim|replace({'(':'', ')':'', '-':''}) }}">
-          {{ __('Call', 'WNYC-Programs') }} {{ post.program_call }} <span class="sr-only">{{ __('about', 'WNYC-Programs') }} {{ post.program_title }}</span>
+          {{ __('Call', 'WNYC') }} {{ post.program_call }} <span class="sr-only">{{ __('about', 'WNYC') }} {{ post.program_title }}</span>
         </a>
         {% endif %}
 
         {% if post.program_email %}
         <a class="btn btn-secondary w-full" href="mailto:{{ post.program_email }}">
-          {{ __('Email', 'WNYC-Programs') }} {{ post.program_email }} <span class="sr-only">{{ __('about', 'WNYC-Programs') }} {{ post.program_title }}</span>
+          {{ __('Email', 'WNYC') }} {{ post.program_email }} <span class="sr-only">{{ __('about', 'WNYC') }} {{ post.program_title }}</span>
         </a>
         {% endif %}
       </nav>
@@ -318,7 +322,7 @@
         </article>
       </div>
     </section>
-    {# Suggest Update end#}
+    {# Suggest Update end #}
 
     {# More #}
     {# <section class="bg-scale-1 layout-content tablet:pb-6">
@@ -328,7 +332,7 @@
           <a class="btn btn-primary btn-next w-full" href="#">
             <svg aria-hidden="true" class="icon-wnyc-ui">
               <use href="#arrow-left"></use>
-            </svg>{{ __('More programs at', 'WNYC-Programs') }} {{post.program_provider}}<svg aria-hidden="true" class="icon-wnyc-ui">
+            </svg>{{ __('More programs at', 'WNYC') }} {{post.program_provider}}<svg aria-hidden="true" class="icon-wnyc-ui">
               <use href="#arrow-right"></use>
             </svg>
           </a>
